--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
  command = "echo 'Build complete'"
- publish = "."
+ publish = "src/frontend"
 [[redirects]]
  from = "/*"
  to = "/index.html"
